--- a/Tech/Shopper/app/src/main/res/layout/row_chat_left.xml
+++ b/Tech/Shopper/app/src/main/res/layout/row_chat_left.xml
@@ -29,15 +29,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
-        <TextView
-            android:id="@+id/row_chat_timeTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="5dp"
-            android:text="02/03/2020 05:59PM"
-            android:textColor="@color/colorBlack"
-            android:textSize="12sp"/>
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/row_chat_timeTV"
+        android:layout_marginStart="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="5dp"
+        android:text="02/03/2020 05:59PM"
+        android:textColor="@color/colorBlack"
+        android:textSize="12sp"/>
 
     <TextView
         android:id="@+id/row_chat_isSeenTV"
