--- a/Tech/Shopper/app/src/main/res/layout/activity_shop_insight_product.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_shop_insight_product.xml
@@ -97,7 +97,8 @@
         <com.github.mikephil.charting.charts.PieChart
             android:id="@+id/shop_insight_product_PC"
             android:layout_width="match_parent"
-            android:layout_height="400dp"/>
+            android:layout_height="400dp"
+            />
 
 
         <!-- Title -->
