--- a/Tech/Shopper/app/src/main/res/layout/activity_login.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_login.xml
@@ -56,6 +56,7 @@
         android:layout_marginBottom="20dp">
 
         <com.google.android.gms.common.SignInButton
+            android:visibility="gone"
             android:id="@+id/googleLoginBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -64,10 +65,11 @@
 
         <!-- TextView: Mall -->
         <TextView
+            android:layout_marginTop="50dp"
             android:id="@+id/login_mall_TV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/open_sans_bold"
+            android:fontFamily="@font/montserrat_bold"
             android:text="xxx Mall"
             android:textSize="20sp" />
 
@@ -87,7 +89,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/textbox_border"
-                android:fontFamily="@font/open_sans"
+                android:fontFamily="@font/montserrat"
                 android:hint="Email"
                 android:inputType="textEmailAddress"
                 android:paddingVertical="10dp"
@@ -109,7 +111,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/textbox_border"
-                android:fontFamily="@font/open_sans"
+                android:fontFamily="@font/montserrat"
                 android:hint="Password"
                 android:inputType="textPassword"
                 android:paddingLeft="10dp" />
@@ -221,17 +223,17 @@
             android:id="@+id/recover_password_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/open_sans"
+            android:fontFamily="@font/montserrat"
             android:text="@string/recover_password"
             android:textColor="@color/colorBlack"
             android:textAlignment="center"
-            android:layout_marginVertical="10dp"/>
+            android:layout_marginVertical="20dp"/>
 
         <TextView
             android:id="@+id/dont_have_account_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/open_sans"
+            android:fontFamily="@font/montserrat"
             android:textAlignment="center"
             android:text="@string/dont_have_an_account"
             android:textColor="@color/colorBlack" />
