--- a/Tech/Shopper/app/src/main/res/layout/activity_splash_screen.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SplashScreen"
-    android:background="@color/colorMainColour">
+    android:background="@color/colorBackgroundColour">
 
     <!-- Text: Let's Collab-->
 
@@ -20,7 +20,7 @@
             android:id="@+id/ss_icon_IV"
             android:layout_width="250dp"
             android:layout_height="250dp"
-            android:src="@mipmap/ic_logo" />
+            android:src="@mipmap/ic_logogo_red" />
 
         <TextView
             android:id="@+id/ss_name_TV"
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/lemonada_semibold"
             android:text="Let's Collab"
-            android:textColor="@color/colorWhite"
+            android:textColor="@color/colorMainColour"
             android:textSize="35sp"
             android:textStyle="bold" />
     </LinearLayout>
